# Sorting_Algorithms

./: CMakeLists.txt  Main.cpp  README.md  liczby.txt
Listy/: ListFromFile.cpp  ListFromFile.h  RandomList.cpp  RandomList.h
Main/: ActionMenu.cpp  ActionMenu.h  MainMenu.cpp  MainMenu.h  MeunRandomList.cpp  MeunRandomList.h  SortMenu.cpp  SortMenu.h
Sortowanie/: ClassicShellSort.cpp  ClassicShellSort.h  HeapSort.cpp  HeapSort.h  HibbardShellSort.cpp  HibbardShellSort.h  InsertionSort.cpp  InsertionSort.h  QuickSort.cpp  QuickSort.h
testy/: tests.cpp  tests.h
